; ModuleID = '/home/carl/AnghaBench/lab/q3map2/q3map2/extr_shaders.c_TCModIdentity.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/q3map2/extr_shaders.c_TCModIdentity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TCModIdentity(float** %0) #0 {
  %2 = alloca float**, align 8
  store float** %0, float*** %2, align 8
  %3 = load float**, float*** %2, align 8
  %4 = getelementptr inbounds float*, float** %3, i64 0
  %5 = load float*, float** %4, align 8
  %6 = getelementptr inbounds float, float* %5, i64 0
  store float 1.000000e+00, float* %6, align 4
  %7 = load float**, float*** %2, align 8
  %8 = getelementptr inbounds float*, float** %7, i64 0
  %9 = load float*, float** %8, align 8
  %10 = getelementptr inbounds float, float* %9, i64 1
  store float 0.000000e+00, float* %10, align 4
  %11 = load float**, float*** %2, align 8
  %12 = getelementptr inbounds float*, float** %11, i64 0
  %13 = load float*, float** %12, align 8
  %14 = getelementptr inbounds float, float* %13, i64 2
  store float 0.000000e+00, float* %14, align 4
  %15 = load float**, float*** %2, align 8
  %16 = getelementptr inbounds float*, float** %15, i64 1
  %17 = load float*, float** %16, align 8
  %18 = getelementptr inbounds float, float* %17, i64 0
  store float 0.000000e+00, float* %18, align 4
  %19 = load float**, float*** %2, align 8
  %20 = getelementptr inbounds float*, float** %19, i64 1
  %21 = load float*, float** %20, align 8
  %22 = getelementptr inbounds float, float* %21, i64 1
  store float 1.000000e+00, float* %22, align 4
  %23 = load float**, float*** %2, align 8
  %24 = getelementptr inbounds float*, float** %23, i64 1
  %25 = load float*, float** %24, align 8
  %26 = getelementptr inbounds float, float* %25, i64 2
  store float 0.000000e+00, float* %26, align 4
  %27 = load float**, float*** %2, align 8
  %28 = getelementptr inbounds float*, float** %27, i64 2
  %29 = load float*, float** %28, align 8
  %30 = getelementptr inbounds float, float* %29, i64 0
  store float 0.000000e+00, float* %30, align 4
  %31 = load float**, float*** %2, align 8
  %32 = getelementptr inbounds float*, float** %31, i64 2
  %33 = load float*, float** %32, align 8
  %34 = getelementptr inbounds float, float* %33, i64 1
  store float 0.000000e+00, float* %34, align 4
  %35 = load float**, float*** %2, align 8
  %36 = getelementptr inbounds float*, float** %35, i64 2
  %37 = load float*, float** %36, align 8
  %38 = getelementptr inbounds float, float* %37, i64 2
  store float 1.000000e+00, float* %38, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
